--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -95,6 +95,10 @@
     <ClCompile Include="src\Window\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\AssetStruct\Material\Material.h" />
+    <ClInclude Include="src\AssetStruct\Mesh\MeshVertex.h" />
+    <ClInclude Include="src\AssetStruct\Model\Model.h" />
+    <ClInclude Include="src\AssetStruct\Transformation\Transformation.h" />
     <ClInclude Include="src\Containers\Array.h" />
     <ClInclude Include="src\Core\CoreAPI.h" />
     <ClInclude Include="src\Core\Types.h" />
